@startuml erd-csdl
title Sơ đồ quan hệ thực thể (ERD) - Cơ sở dữ liệu HASAKI
skinparam shadowing false
skinparam linetype ortho
!define PK <b><color:#FF5E8E>PK</color></b>
!define FK <color:#0066CC>FK</color>
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #FF5E8E
  HeaderBackgroundColor #FFF0F3
}
hide methods
hide circle

entity LoaiTaiKhoan {
  PK MaLoaiTaiKhoan : INT
  --
  TenLoaiTaiKhoan : VARCHAR(50)
  MoTa : VARCHAR(255)
}

entity TaiKhoan {
  PK MaTaiKhoan : INT
  --
  TenTaiKhoan : VARCHAR(100) <<unique>>
  MatKhau : VARCHAR(255)
  FK LoaiTaiKhoan : INT
  TrangThai : TINYINT
  NgayTao : DATETIME
}

entity NhanVien {
  PK MaNV : INT
  --
  TenNV : VARCHAR(100)
  SDT : VARCHAR(15)
  Email : VARCHAR(100)
  CMND : VARCHAR(20)
  FK MaTaiKhoan : INT
}

entity KhachHang {
  PK MaKhachHang : INT
  --
  TenKhachHang : VARCHAR(100)
  SDT : VARCHAR(15)
  Email : VARCHAR(100)
  FK MaTaiKhoan : INT
  NgayDangKy : DATETIME
}

entity DanhMuc {
  PK MaDanhMuc : INT
  --
  TenDanhMuc : VARCHAR(100)
  MoTa : VARCHAR(255)
}

entity SanPham {
  PK MaSanPham : INT
  --
  FK MaDanhMuc : INT
  TenSanPham : VARCHAR(255)
  GiaBan : DECIMAL(12,2)
  SoLuong : INT
  HinhAnh : VARCHAR(255)
}

entity HoaDonBan {
  PK MaHoaDon : INT
  --
  NgayBan : DATETIME
  ThanhTien : DECIMAL(12,2)
  FK MaKhachHang : INT
  HinhThucTT : VARCHAR(50)
  TrangThai : INT
}

entity ChiTietHoaDonBan {
  PK MaChiTietHoaDon : INT
  --
  FK MaHoaDon : INT
  FK MaSanPham : INT
  SoLuong : INT
  GiaBan : DECIMAL(12,2)
}

entity HoaDonNhap {
  PK MaHoaDon : INT
  --
  NgayNhap : DATETIME
  ThanhTien : DECIMAL(12,2)
  TenNCC : VARCHAR(100)
  FK MaNV : INT
}

entity ChiTietHoaDonNhap {
  PK MaChiTietHoaDon : INT
  --
  FK MaHoaDon : INT
  FK MaSanPham : INT
  SoLuong : INT
  GiaNhap : DECIMAL(12,2)
}

entity KhoHang {
  PK MaKho : INT
  --
  FK MaSanPham : INT
  SoLuongCon : INT
  NgayNhap : DATE
}

entity DanhGia {
  PK MaDanhGia : INT
  --
  FK MaSanPham : INT
  FK MaKhachHang : INT
  SoSao : TINYINT
  NoiDung : TEXT
}

LoaiTaiKhoan ||--o{ TaiKhoan
TaiKhoan ||--o| NhanVien
TaiKhoan ||--o| KhachHang
DanhMuc ||--o{ SanPham
KhachHang ||--o{ HoaDonBan
HoaDonBan ||--|{ ChiTietHoaDonBan
SanPham ||--o{ ChiTietHoaDonBan
NhanVien ||--o{ HoaDonNhap
HoaDonNhap ||--|{ ChiTietHoaDonNhap
SanPham ||--o{ ChiTietHoaDonNhap
SanPham ||--o{ KhoHang
SanPham ||--o{ DanhGia
KhachHang ||--o{ DanhGia

@enduml
